welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:4: error: not found: value avancer
	avancer Hungryi();
        ^