welcome.lessons.welcome.loopfor.LoopFor.scala.code
for (i <- 1 to 6)
while(estSurBiscuit==false){
	avancer Hungryi();
}
